# PSVManager

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  GUIDs.h  InStreamWrapper.cpp  InStreamWrapper.h  SevenZipHandler.cpp  SevenZipHandler.h  SfoReader.cpp  SfoReader.h  UTF8.h  main.cpp
